[package]
name = "jpeg-labs"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
num_enum = "0.5"
lazy_static = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
